<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.utoronto.caleb.pulseoximeterapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/device_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="onClickLogUsbDevices"
            android:text="@string/device_btn_lbl" />

        <Button
            android:id="@+id/monitor_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="onClickMonitorBtn"
            android:text="@string/monitor_btn_lbl" />

        <Switch
            android:id="@+id/switch_fingertip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/device_name_fingertip" />

        <Switch
            android:id="@+id/switch_flora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/device_name_flora" />

        <Switch
            android:id="@+id/switch_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/device_name_bluetooth" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
